20. Final Mega Capstone Project/projects/07-python-learning-monolith/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learning
  namespace: learning-python
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "15"
spec:
  ingressClassName: nginx
  rules:
    - host: learning.local.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: learning-app, port: { number: 80 } } }
